# incubation-prep

./: .gitignore  .gitmodules  output.py  output_zmq.py  pyproject.toml  rtsp-simple-server.yml  start-rtsp.sh
.dvc/: config
baseline/: pipeline.py
baseline/components/: component.py  det.py  output.py  track.py
incubation_prep/: client.py  jina_client.py  pipeline.py
incubation_prep/baseline/: Dockerfile  pipeline.py  requirements.txt
incubation_prep/baseline/components/: component.py  det.py  embedder.py  output.py  track.py
incubation_prep/client/: .Dockerignore  .gitignore  Dockerfile  Makefile  client.py  client_buffer.py  client_test_encode.py  client_test_pop.py  requirements.txt  rtsp_client.py  zmq_client.py
incubation_prep/client/baseline/: pipeline.py  pipeline_old.py  requirements.txt
incubation_prep/client/visualize/: zmq_client.py
incubation_prep/components/: component.py  drawer.py  object_det.py  object_track.py  split_frames.py
incubation_prep/components/Detector/: Dockerfile  det.py  requirements.txt
incubation_prep/components/SaveFrames/: Dockerfile  requirements.txt  save.py
incubation_prep/components/StreamOutput/: Dockerfile  output.py
incubation_prep/components/Tracker/: Dockerfile  __init__.py  requirements.txt  track.py
incubation_prep/data/: .gitignore  1080p60_nyc.m4v.dvc  4k_nyc.m4v.dvc  SampleVideo_720x480_30mb.mp4.dvc  sample1.mp4.dvc  sample_1080p.mp4.dvc
incubation_prep/executors/ObjectDetector/: README.md  config.yml  executor.py
incubation_prep/fastapi/: pipeline.py
incubation_prep/jina/: Makefile  flow.yml  flow_dockerized.yml  flow_triton.yml  jina_client.py  memleak.yml
incubation_prep/jina/flows/: one.yml  three.yml  two.yml
incubation_prep/k8s/baseline-client/: deployment.yaml  deployment_baseline.yaml
incubation_prep/k8s/config/: component-common.yaml  kafka-common.yaml  non-triton.yaml  redis-common.yaml  using-triton.yaml
incubation_prep/k8s/pvc/: pv.yaml  pvc.yaml
incubation_prep/pubsub/: add_topics.py  client.py  component.py  component_jina.py  create_topic.py  docker-compose.yaml  zmq_subscriber.py
incubation_prep/pubsub/Client/: Dockerfile  client.py
incubation_prep/pubsub/Detector/: Dockerfile  (+4 more)
incubation_prep/weights/: osnet_x0_25.engine
jina/: flow.yml  jina_client.py
linkerd-control-plane/: Chart.yaml  values.yaml
scripts/: kafka-docker-compose.yml  pull-pubsub-images.sh  redis-docker-compose.yml  start-rtsp.sh
scripts/get-msg-size/: consume.py
scripts/test-kafka-load-balancing/: consumer_1.py  consumer_2.py  create_topic.py  producer.py  start.sh
(+140 files in other folders)
