[tool.poetry]
name = "incubation-prep"
version = "0.1.0"
description = ""
authors = ["Tien-Cheng <tiencheng@protonmail.com>"]
readme = "README.md"
packages = [{include = "incubation_prep"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.0"
torchvision = "^0.14.0"
tqdm = "^4.64.1"
PyYAML = "^6.0"
Pillow = "^9.3.0"
numpy = "^1.23.4"
deep-sort-realtime = "^1.3.1"
dvc = {extras = ["gdrive"], version = "^2.34.2"}
jina = "^3.11.0"
tritonclient = "^2.28.0"
scaledyolov4 = {path = "ScaledYOLOv4"}
opencv-python = "^4.6.0.66"
opencv-contrib-python = "^4.6.0.66"
yolov5 = "^6.2.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
