[tool.poetry]
name = "incubation-prep"
version = "0.1.0"
description = ""
authors = ["Tien-Cheng <tiencheng@protonmail.com>"]
readme = "README.md"
packages = [{include = "incubation_prep"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.0"
torchvision = "^0.14.0"
tqdm = "^4.64.1"
PyYAML = "^6.0"
Pillow = "^9.3.0"
numpy = "^1.23.4"
deep-sort-realtime = "^1.3.1"
dvc = {extras = ["gdrive"], version = "^2.34.2"}
jina = "^3.11.0"
tritonclient = "^2.28.0"
yolov5 = {path = "yolov5-pip"}
memory-profiler = "^0.61.0"
redis-streams = "^0.1.0"
redis = "^4.3.5"
kafka = "^1.3.5"
opencv-python = "^4.6.0.66"
uvloop = "^0.17.0"
vidgear = {extras = ["core"], version = "^0.2.6"}
pyzmq = "^24.0.1"
imagezmq = "^1.1.1"
faust-streaming = "^0.10.0"
gdown = "^4.5.4"
simpletimer-kafka = "0.1.9"
confluent-kafka = "^1.9.2"
bytetracker = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

